# waferbot_ros2_ws

./: .gitignore  .gitmodules  README.md
doc/: gpio_usage.txt  useful_commands.txt
doc/performance_analysis/: performance_analysis.txt
doc/rqt_graph_two_sim_bots_nav2_rmf/: rosgraph.dot
src/gazebo/: package.xml  setup.cfg  setup.py
src/gazebo/config/: config.yaml
src/gazebo/gazebo/: simulator_camera.py  simulator_imu.py  simulator_lidar.py  simulator_line_tracking.py  simulator_motor.py  simulator_ultrasonic.py
src/gazebo/launch/: bridges_launch.py  gazebo_launch.py  helpers_launch.py  robot_spawn_launch.py  ros2_control_launch.py  simulation_launch.py
src/gazebo/launch/bridges/: simulator_camera_launch.py  simulator_imu_launch.py  simulator_lidar_launch.py  simulator_line_tracking_launch.py  simulator_servo_launch.py  simulator_ultrasonic_launch.py
src/gazebo/launch/helpers/: image_compressor_launch.py  simulator_servo_launch.py  ultrasonic_interpreter_launch.py
src/gazebo/worlds/objects/: borders.sdf  line_plane.dae  obstacle.sdf
src/hardware/: package.xml  setup.py
src/hardware/config/: config.yaml
src/hardware/hardware/: camera_node.py
src/hardware/launch/: camera_launch.py  imu_launch.py  servo_launch.py  ultrasonic_launch.py
src/mapping_and_navigation/: package.xml  setup.cfg  setup.py
src/mapping_and_navigation/config/: custom_mapper_params_online_async.yaml  custom_nav2_params.yaml  simulator_custom_nav2_params.yaml
src/mapping_and_navigation/launch/: navigation_launch.py  slam_mapping_launch.py  slam_toolbox_launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/description/: component_macros.xacro  frame.xacro  gazebo.xacro  properties.xacro  robot.xacro  ros2_control.xacro  sensors_and_acuators.xacro
src/robot_description/description/meshes/: orp_baseplate.stl  orp_battery_base.stl  orp_battery_bms_charger_cover.stl  orp_battery_bottom.stl  orp_battery_top.stl  orp_camera_adapter.stl  orp_jga25-371_motor_adapter.stl  orp_lidar_adapter.stl  orp_rpi4b_adapter.stl  orp_servo_adapter.stl  servo_to_ultrasonic_adapter.stl
src/robot_description/launch/: robot_state_publisher_launch.py  rviz_launch.py
src/waferbot/waferbot_behaviors/: package.xml  setup.cfg  setup.py
src/waferbot/waferbot_behaviors/config/: _motion_executor.yaml  _wandering.yaml
src/waferbot/waferbot_behaviors/launch/: motion_executor_launch.py  wandering_launch.py  wandering_node_launch.py
src/waferbot/waferbot_behaviors/waferbot_behaviors/: motion_executor_node.py  wandering_node.py
src/waferbot/waferbot_bringup/: CMakeLists.txt  package.xml
src/waferbot/waferbot_bringup/launch/: real_robot_launch.py  rviz_launch.py  simulation_launch.py  waferbot_launch.py
src/waferbot/waferbot_bringup/rviz/: multi_robot.rviz  single_robot.rviz
src/waferbot/waferbot_control_bringup/: CMakeLists.txt  package.xml
src/waferbot/waferbot_control_bringup/config/: _controller_manager.yaml  _diff_drive_controller.yaml  _forward_command_controller.yaml  _joint_state_broadcaster.yaml
src/waferbot/waferbot_control_bringup/launch/: controller_manager_launch.py  diff_drive_controller_launch.py  forward_command_controller_launch.py  joint_state_broadcaster_launch.py
src/waferbot/waferbot_description/: CMakeLists.txt  package.xml
src/waferbot/waferbot_description/config/: config.rviz  multi_robot.rviz
src/waferbot/waferbot_description/description/: component_macros.xacro  gazebo_plugins.xacro  physical_components.xacro  ros2_control_plugins.xacro  waferbot.xacro
src/waferbot/waferbot_description/description/meshes/: orp_spacer.stl
src/waferbot/waferbot_description/launch/: robot_state_publisher_launch.py  rviz_launch.py
src/waferbot/waferbot_description/meshes/: orp_batteries.stl  orp_camera_adapter.stl  orp_caster_wheel_adapter.stl  orp_rpi4b_adapter.stl
src/waferbot/waferbot_description/xacro/: component_macros.xacro  gazebo_plugins.xacro  physical_components.xacro  properties.xacro  ros2_control_plugins.xacro  waferbot.xacro
src/waferbot/waferbot_gazebo/: package.xml  setup.cfg  setup.py
src/waferbot/waferbot_localization_bringup/: CMakeLists.txt  package.xml
src/waferbot/waferbot_localization_bringup/config/: _ekf_fusion.yaml
src/waferbot/waferbot_localization_bringup/launch/: ekf_fusion_launch.py
src/waferbot/waferbot_mapping_and_navigation_bringup/: package.xml  setup.cfg  setup.py
src/waferbot/waferbot_mapping_bringup/: CMakeLists.txt  package.xml
src/waferbot/waferbot_motion_control/: package.xml  setup.cfg  setup.py
src/waferbot/waferbot_msgs/: CMakeLists.txt  package.xml
src/waferbot/waferbot_msgs/action/: Drive.action  Spin.action
src/waferbot/waferbot_navigation_bringup/: CMakeLists.txt  package.xml
src/waferbot/waferbot_navigation_bringup/config/: _navigation.yaml  _navigation_real.yaml  _navigation_sim.yaml  navigate_to_pose_w_replanning_and_recovery.xml
src/waferbot/waferbot_navigation_bringup/launch/: composable_navigation_launch.py  navigation_launch.py
src/waferbot/waferbot_rmf/: CMakeLists.txt  package.xml
src/waferbot/waferbot_rmf/config/: _visualization_config.yaml  waferbot_adapter_config.yaml
src/waferbot/waferbot_rmf/launch/: launch.py  request_task_launch.py  rmf_launch.py  rmf_visualization_fixer_launch.py  visualization_launch.py
src/waferbot/waferbot_rmf/maps/: wandering.building.yaml  warehouse.building.yaml
src/waferbot/waferbot_rmf/waferbot_rmf/: fleet_adapter.py  mock_dispenser_ingestor.py  relay.py  rmf_visualization_fixer.py  robot_adapter.py  task_requester.py  task_state_logger.py
src/waferbot/waferbot_ros2_control_bringup/: CMakeLists.txt  package.xml
src/waferbot/waferbot_sensor_nodes/: package.xml  setup.cfg  setup.py
src/waferbot/waferbot_sensors/: package.xml  setup.cfg  setup.py
src/waferbot/waferbot_sensors/config/: _sensors.yaml  _ydlidar.yaml
src/waferbot/waferbot_sensors/launch/: camera_launch.py  imu_launch.py  ultrasonic_launch.py  ydlidar_launch.py
src/waferbot/waferbot_sensors/waferbot_sensors/: camera_node.py  imu_node.py  ultrasonic_node.py
(+86 files in other folders)
