<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waferbot_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="daniel.onderk@gmail.com">daniel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>rviz2</exec_depend>

  <exec_depend>waferbot_behaviors</exec_depend>
  <exec_depend>waferbot_control_bringup</exec_depend>
  <exec_depend>waferbot_description</exec_depend>
  <exec_depend>waferbot_gazebo</exec_depend>
  <exec_depend>waferbot_localization_bringup</exec_depend>
  <exec_depend>waferbot_mapping_bringup</exec_depend>
  <exec_depend>waferbot_msgs</exec_depend>
  <exec_depend>waferbot_navigation_bringup</exec_depend>
  <exec_depend>waferbot_rmf</exec_depend>
  <exec_depend>waferbot_sensors</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
