<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waferbot_navigation_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="daniel.onderk@gmail.com">daniel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_smoother</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_collision_monitor</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>opennav_docking</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_common</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
