<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waferbot_sensors</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="daniel.onderk@gmail.com">daniel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <exec_depend>sensor_msgs</exec_depend>

  <exec_depend>pigpio</exec_depend>
  <exec_depend>mpu6050</exec_depend>
  <exec_depend>picamera2</exec_depend>
  <exec_depend>cv2</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
